   necessary version string to DLLs, 2) passing the executable's name
   to 'ldopts' without the .exe extension, 3) avoiding calling 'env'
   via the 'shrpenv' thingy, since it triggers a fork() bug. [Ilya
   Zakharevich]

 - Integrate a couple cleanup-related changes from bleadperl that
   somehow never got into this copy. [Steve Hay]

0.14  Mon Sep 19 13:40:37 CDT 2005

 - Several fixes have been made for VMS, including: 1) there can only
   be one /include qualifier, so merge multiple /includes into one; 2)
   make sure the executable is named the same way that dynaloader will
   look for it; 3) make sure the option files for the exported symbols
   and the PERLSHR image are passed properly to the linker. [John
   E. Malmberg]

0.13  Wed Aug 24 20:05:59 CDT 2005

 - Several temporary files weren't being cleaned up during testing,
   because the 'cleanup' mechanism was never properly implemented.
   This is now fixed. [Steve Hay]

0.12  Mon May 30 16:40:10 CDT 2005

 - In order to integrate into the perl core, patches were contributed
   that a) put a $VERSION variable in each .pm file, b) add a 'quiet'
   parameter to new() to shut up some of the command-echoing, c)
   checks for the perl source headers in the CORE/ directory in the
   perl source tree, not in the post-installation location, and d)
   adjusts the CWD when running the regression tests under the perl
   core. [Yitzchak Scott-Thoennes]

 - Various parts of the code were looking for the CORE/ directory in
   $Config{archlib}, $Config{installarchlib}, and $Config{archlibexp}.
   Only the latter is correct, so we use that everywhere now. 
   [Curt Tilmes]

 - For Unix-ish platforms, link_executable() will now prefer
   $Config{cc} to $Config{ld}, because that typically works
   better. [Jarkko Hietaniemi and H.Merijn Brand]

 - Prelinking (invoking ExtUtils::Mksymlists to create options-files)
   is now only done when we're building dynamic libraries. [Yitzchak
   Scott-Thoennes]
