@@ -11,6 +11,10 @@ Revision history for Perl extension ExtUtils::CBuilder.
  - Integrate a couple cleanup-related changes from bleadperl that
    somehow never got into this copy. [Steve Hay]
 
+ - Added a new 'defines' parameter to compile(), which gives a
+   platform-independant way to specify various -Dfoo=bar (or the
+   equivalent) compiler defines. [Randy W. Sims]
+
 0.14  Mon Sep 19 13:40:37 CDT 2005
 
  - Several fixes have been made for VMS, including: 1) there can only
